--- a/src/main/resources/org/example/MainScreen.fxml
+++ b/src/main/resources/org/example/MainScreen.fxml
@@ -2,22 +2,35 @@
 
 <?import eu.hansolo.medusa.Gauge?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #8789C0;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.MainScreenController">
+<AnchorPane prefHeight="764.0" prefWidth="1280.0" style="-fx-background-color: #8789C0;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.MainScreenController">
     <children>
-        <Button fx:id="botonCerrar" layoutX="778.0" layoutY="-1.0" mnemonicParsing="false" onAction="#closeApp" prefHeight="26.0" prefWidth="36.0" style="-fx-background-color: red; -fx-font-weight: 700;" text="X" textFill="#fcfbfb">
+        <Button fx:id="botonCerrar" layoutX="1248.0" mnemonicParsing="false" onAction="#closeApp" prefHeight="26.0" prefWidth="36.0" style="-fx-background-color: red; -fx-font-weight: 700;" text="X" textFill="#fcfbfb">
             <font>
                 <Font name="Consolas" size="16.0" />
             </font>
         </Button>
       <Gauge fx:id="gaugeRAM" layoutX="488.0" layoutY="316.0" />
-      <StackPane alignment="BOTTOM_CENTER" prefHeight="600.0" prefWidth="250.0" style="-fx-padding: 50px;">
-         <children>
-            <Button fx:id="addServerButton" mnemonicParsing="false" onAction="#addServer" text="Añadir Servidor" />
-         </children>
-      </StackPane>
+        <BorderPane fx:id="borderPaneServers" prefHeight="764.0" prefWidth="239.0" stylesheets="@../../CSS/styles.css">
+            <bottom>
+                <Button id="addServer" fx:id="addServerButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#addServer" text="Añadir Servidor" />
+            </bottom>
+         <top>
+            <VBox fx:id="vBoxServers" prefHeight="637.0" prefWidth="252.0" style="-fx-background-color: #444444;" stylesheets="@../../CSS/styles.css" BorderPane.alignment="CENTER">
+               <children>
+                  <Label contentDisplay="CENTER" text="Servidores" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+         </top>
+        </BorderPane>
     </children>
 </AnchorPane>
