--- a/src/main/resources/org/example/MainScreen.fxml
+++ b/src/main/resources/org/example/MainScreen.fxml
@@ -5,10 +5,11 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="764.0" prefWidth="1280.0" style="-fx-background-color: #8789C0;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.MainScreenController">
+<AnchorPane prefHeight="800.0" prefWidth="1244.0" style="-fx-background-color: #8789C0;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.MainScreenController">
     <children>
         <Button fx:id="botonCerrar" layoutX="1248.0" mnemonicParsing="false" onAction="#closeApp" prefHeight="26.0" prefWidth="36.0" style="-fx-background-color: red; -fx-font-weight: 700;" text="X" textFill="#fcfbfb">
             <font>
@@ -16,12 +17,9 @@
             </font>
         </Button>
       <Gauge fx:id="gaugeRAM" layoutX="488.0" layoutY="316.0" />
-        <BorderPane fx:id="borderPaneServers" prefHeight="764.0" prefWidth="239.0" stylesheets="@../../CSS/styles.css">
-            <bottom>
-                <Button id="addServer" fx:id="addServerButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#addServer" text="Añadir Servidor" />
-            </bottom>
+        <BorderPane id="contenedorLateral" fx:id="borderPaneServers" prefHeight="764.0" prefWidth="239.0" stylesheets="@../../CSS/styles.css">
          <top>
-            <VBox fx:id="vBoxServers" prefHeight="637.0" prefWidth="252.0" style="-fx-background-color: #444444;" stylesheets="@../../CSS/styles.css" BorderPane.alignment="CENTER">
+            <VBox fx:id="vBoxServers" prefHeight="637.0" prefWidth="252.0" style="-fx-padding: 50px;" stylesheets="@../../CSS/styles.css" BorderPane.alignment="CENTER">
                <children>
                   <Label contentDisplay="CENTER" text="Servidores" textAlignment="CENTER" textFill="WHITE">
                      <font>
@@ -31,6 +29,15 @@
                </children>
             </VBox>
          </top>
+         <bottom>
+            <Pane prefHeight="160.0" prefWidth="239.0" BorderPane.alignment="CENTER">
+               <children>
+                      <Button id="addServer" fx:id="addServerButton" alignment="CENTER" contentDisplay="CENTER" layoutX="27.0" layoutY="72.0" mnemonicParsing="false" onAction="#addServer" text="Añadir Servidor" />
+               </children>
+            </Pane>
+         </bottom>
         </BorderPane>
     </children>
 </AnchorPane>
+
+
