--- a/src/main/resources/org/example/MainScreen.fxml
+++ b/src/main/resources/org/example/MainScreen.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -20,135 +19,133 @@
 <?import javafx.scene.text.Font?>
 
 
-<TabPane style="-fx-background-color: #444;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.MainScreenController">
-   <tabs>
-      <Tab>
-         <content>
-            <AnchorPane id="box" prefHeight="778.0" prefWidth="1100.0" style="-fx-background-color: #444; -fx-background-radius: 20px;">
+    <AnchorPane id="box" prefHeight="777.0" prefWidth="1106.0" style="-fx-background-color: #444; -fx-background-radius: 20px;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.MainScreenController">
+        <children>
+            <Pane layoutX="38.0" layoutY="47.0" prefHeight="710.0" prefWidth="319.0" style="-fx-background-color: #8093ea; -fx-background-radius: 20px; -fx-border-color: #1f4ef8; -fx-border-width: 2px; -fx-border-radius: 20px;">
                 <children>
-                  <Pane layoutX="38.0" layoutY="47.0" prefHeight="710.0" prefWidth="319.0" style="-fx-background-color: #8093ea; -fx-background-radius: 20px; -fx-border-color: #1f4ef8; -fx-border-width: 2px; -fx-border-radius: 20px;">
-                     <children>
-                        <VBox fx:id="vBoxServers" layoutX="21.0" layoutY="301.0" prefHeight="344.0" prefWidth="280.0" style="-fx-padding: 50px; -fx-background-color: #ffffff;" stylesheets="@../../CSS/styles.css" />
-                            <Button id="addServer" fx:id="addServerButton" alignment="CENTER" contentDisplay="CENTER" layoutX="111.0" layoutY="671.0" mnemonicParsing="false" onAction="#addServer" text="Añadir Servidor" />
-                        <Label alignment="CENTER" layoutX="40.0" layoutY="258.0" prefHeight="17.0" prefWidth="239.0" text="Servidores" textAlignment="CENTER">
-                           <font>
-                              <Font name="Consolas" size="30.0" />
-                           </font>
-                        </Label>
-                        <ImageView fitHeight="188.0" fitWidth="208.0" layoutX="66.0" layoutY="44.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../Images/Logo.png" />
-                           </image>
-                        </ImageView>
-                     </children>
-                  </Pane>
-                  <Pane layoutX="430.0" layoutY="47.0" prefHeight="220.0" prefWidth="280.0" style="-fx-background-color: #8093ea; -fx-background-radius: 20px; -fx-border-color: #1f4ef8; -fx-border-width: 2px; -fx-border-radius: 20px;">
-                     <children>
-                        <Label layoutX="73.0" layoutY="14.0" prefHeight="28.0" prefWidth="135.0" text="Uso de RAM" textAlignment="JUSTIFY">
-                           <font>
-                              <Font name="Consolas Bold" size="24.0" />
-                           </font>
-                        </Label>
-                        <Gauge fx:id="gaugeRAM" alert="true" alertMessage="Se ha superado el umbral" knobType="FLAT" layoutX="64.0" layoutY="54.0" lcdFont="STANDARD" majorTickMarkType="TRAPEZOID" mediumTickMarkType="TRIANGLE" minorTickMarkType="DOT" needleBehavior="OPTIMIZED" prefHeight="152.0" prefWidth="149.0" skinType="MODERN" title="RAM" unit="\%">
-                           <minorTickMarkColor>
-                              <Color red="0.010526316240429878" green="0.010487329214811325" blue="0.010487329214811325" />
-                           </minorTickMarkColor>
-                           <majorTickMarkColor>
-                              <Color />
-                           </majorTickMarkColor>
-                           <knobColor>
-                              <Color />
-                           </knobColor>
-                        </Gauge>
-                     </children>
-                  </Pane>
-                  <Pane layoutX="808.0" layoutY="47.0" prefHeight="220.0" prefWidth="280.0" style="-fx-background-color: #8093ea; -fx-background-radius: 20px; -fx-border-color: #1f4ef8; -fx-border-width: 2px; -fx-border-radius: 20px;">
-                     <children>
-                        <Gauge fx:id="gaugeCPU" layoutX="68.0" layoutY="54.0" prefHeight="152.0" prefWidth="149.0" skinType="MODERN" threshold="75.0" thresholdVisible="true" title="CPU" unit="\%">
-                           <subTitleColor>
-                              <Color />
-                           </subTitleColor>
-                           <tickMarkColor>
-                              <Color red="0.8947368264198303" green="0.8947368264198303" blue="0.8947368264198303" />
-                           </tickMarkColor>
-                           <titleColor>
-                              <Color red="1.0" green="1.0" blue="1.0" />
-                           </titleColor>
-                           <thresholdColor>
-                              <Color red="0.9684210419654846" green="0.04842105135321617" />
-                           </thresholdColor>
-                        </Gauge>
-                        <Label layoutX="75.0" layoutY="14.0" prefHeight="28.0" prefWidth="135.0" text="Uso de CPU" textAlignment="JUSTIFY">
-                           <font>
-                              <Font name="Consolas Bold" size="24.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </Pane>
-                  <Pane layoutX="430.0" layoutY="288.0" prefHeight="220.0" prefWidth="280.0" style="-fx-background-color: #8093ea; -fx-background-radius: 20px; -fx-border-color: #1f4ef8; -fx-border-width: 2px; -fx-border-radius: 20px;" />
-                  <Pane layoutX="808.0" layoutY="288.0" prefHeight="220.0" prefWidth="280.0" style="-fx-background-color: #8093ea; -fx-background-radius: 20px; -fx-border-color: #1f4ef8; -fx-border-width: 2px; -fx-border-radius: 20px;">
-                     <children>
-                        <Label layoutX="32.0" layoutY="14.0" prefHeight="28.0" prefWidth="217.0" text="Velocidad de Red" textAlignment="JUSTIFY">
-                           <font>
-                              <Font name="Consolas Bold" size="24.0" />
-                           </font>
-                        </Label>
-                        <LineChart layoutX="35.0" layoutY="42.0" prefHeight="152.0" prefWidth="205.0">
-                          <xAxis>
-                            <CategoryAxis side="BOTTOM" />
-                          </xAxis>
-                          <yAxis>
-                            <NumberAxis side="LEFT" />
-                          </yAxis>
-                        </LineChart>
-                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="114.0" layoutY="186.0" prefHeight="17.0" prefWidth="69.0" text="MBPS" />
-                     </children>
-                  </Pane>
-                  <Pane layoutX="430.0" layoutY="531.0" prefHeight="220.0" prefWidth="663.0" style="-fx-background-color: #8093ea; -fx-background-radius: 20px; -fx-border-color: #1f4ef8; -fx-border-width: 2px; -fx-border-radius: 20px;">
-                     <children>
-                        <Gauge fx:id="gaugeDisk" layoutX="465.0" layoutY="44.0" prefHeight="152.0" prefWidth="149.0" skinType="LEVEL" title="Uso" />
-                        <TextField fx:id="textFieldDisksFormat" layoutX="58.0" layoutY="164.0" />
-                        <TextField fx:id="textFieldDiskCapacity" layoutX="258.0" layoutY="164.0" />
-                        <ChoiceBox fx:id="comboBoxDisks" layoutX="57.0" layoutY="85.0" prefHeight="25.0" prefWidth="350.0" />
-                        <Label layoutX="57.0" layoutY="60.0" text="Nombre">
-                           <font>
-                              <Font name="Consolas Bold" size="14.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="56.0" layoutY="139.0" text="Formato">
-                           <font>
-                              <Font name="Consolas Bold" size="14.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="258.0" layoutY="139.0" text="Capacidad">
-                           <font>
-                              <Font name="Consolas Bold" size="14.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="283.0" layoutY="14.0" prefHeight="32.0" prefWidth="98.0" text="Discos" textAlignment="JUSTIFY">
-                           <font>
-                              <Font name="Consolas Bold" size="28.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </Pane>
-                  <HBox alignment="TOP_RIGHT" layoutX="-560.0" layoutY="302.0" prefHeight="30.0" prefWidth="1131.0" style="-fx-background-color: #1f4ef8;">
-                     <children>
-                          <Button fx:id="botonCerrar" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#closeApp" prefHeight="35.0" prefWidth="36.0" style="-fx-background-color: red; -fx-font-weight: 700;" text="X" textFill="#fcfbfb">
-                              <font>
-                                  <Font name="Consolas" size="16.0" />
-                              </font>
-                          </Button>
-                     </children>
-                  </HBox>
+                    <ScrollPane fx:id="scrollPaneServers" layoutX="21.0" layoutY="301.0" prefHeight="355.0" prefWidth="282.0" style="-fx-background-color: #ffffff;" stylesheets="@../../CSS/styles.css">
+                        <content>
+                            <VBox fx:id="vBoxServers" />
+                        </content>
+                    </ScrollPane>
+                    <Button id="addServer" fx:id="addServerButton" alignment="CENTER" contentDisplay="CENTER" layoutX="111.0" layoutY="671.0" mnemonicParsing="false" onAction="#addServer" text="Añadir Servidor" />
+                    <Label alignment="CENTER" layoutX="40.0" layoutY="258.0" prefHeight="17.0" prefWidth="239.0" text="Servidores" textAlignment="CENTER">
+                        <font>
+                            <Font name="Consolas" size="30.0" />
+                        </font>
+                    </Label>
+                    <ImageView fitHeight="188.0" fitWidth="208.0" layoutX="66.0" layoutY="44.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="@../../Images/Logo.png" />
+                        </image>
+                    </ImageView>
                 </children>
-            </AnchorPane>
-         </content>
-      </Tab>
-      <Tab text="Untitled Tab">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-        </content>
-      </Tab>
-   </tabs>
-</TabPane>
+            </Pane>
+      <Pane layoutX="430.0" layoutY="47.0" prefHeight="220.0" prefWidth="280.0" style="-fx-background-color: #8093ea; -fx-background-radius: 20px; -fx-border-color: #1f4ef8; -fx-border-width: 2px; -fx-border-radius: 20px;">
+         <children>
+            <Label layoutX="73.0" layoutY="14.0" prefHeight="28.0" prefWidth="135.0" text="Uso de RAM" textAlignment="JUSTIFY">
+               <font>
+                  <Font name="Consolas Bold" size="24.0" />
+               </font>
+            </Label>
+            <Gauge fx:id="gaugeRAM" alert="true" alertMessage="Se ha superado el umbral" knobType="FLAT" layoutX="64.0" layoutY="54.0" lcdFont="STANDARD" majorTickMarkType="TRAPEZOID" mediumTickMarkType="TRIANGLE" minorTickMarkType="DOT" needleBehavior="OPTIMIZED" prefHeight="152.0" prefWidth="149.0" skinType="MODERN" title="RAM" unit="\%">
+               <minorTickMarkColor>
+                  <Color red="0.010526316240429878" green="0.010487329214811325" blue="0.010487329214811325" />
+               </minorTickMarkColor>
+               <majorTickMarkColor>
+                  <Color />
+               </majorTickMarkColor>
+               <knobColor>
+                  <Color />
+               </knobColor>
+            </Gauge>
+         </children>
+      </Pane>
+      <Pane layoutX="808.0" layoutY="47.0" prefHeight="220.0" prefWidth="280.0" style="-fx-background-color: #8093ea; -fx-background-radius: 20px; -fx-border-color: #1f4ef8; -fx-border-width: 2px; -fx-border-radius: 20px;">
+         <children>
+            <Gauge fx:id="gaugeCPU" layoutX="68.0" layoutY="54.0" prefHeight="152.0" prefWidth="149.0" skinType="MODERN" threshold="75.0" thresholdVisible="true" title="CPU" unit="\%">
+               <subTitleColor>
+                  <Color />
+               </subTitleColor>
+               <tickMarkColor>
+                  <Color red="0.8947368264198303" green="0.8947368264198303" blue="0.8947368264198303" />
+               </tickMarkColor>
+               <titleColor>
+                  <Color red="1.0" green="1.0" blue="1.0" />
+               </titleColor>
+               <thresholdColor>
+                  <Color red="0.9684210419654846" green="0.04842105135321617" />
+               </thresholdColor>
+            </Gauge>
+            <Label layoutX="75.0" layoutY="14.0" prefHeight="28.0" prefWidth="135.0" text="Uso de CPU" textAlignment="JUSTIFY">
+               <font>
+                  <Font name="Consolas Bold" size="24.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
+      <Pane layoutX="430.0" layoutY="288.0" prefHeight="220.0" prefWidth="280.0" style="-fx-background-color: #8093ea; -fx-background-radius: 20px; -fx-border-color: #1f4ef8; -fx-border-width: 2px; -fx-border-radius: 20px;" />
+      <Pane layoutX="808.0" layoutY="288.0" prefHeight="220.0" prefWidth="280.0" style="-fx-background-color: #8093ea; -fx-background-radius: 20px; -fx-border-color: #1f4ef8; -fx-border-width: 2px; -fx-border-radius: 20px;">
+         <children>
+            <Label layoutX="32.0" layoutY="14.0" prefHeight="28.0" prefWidth="217.0" text="Velocidad de Red" textAlignment="JUSTIFY">
+               <font>
+                  <Font name="Consolas Bold" size="24.0" />
+               </font>
+            </Label>
+            <LineChart layoutX="35.0" layoutY="42.0" prefHeight="152.0" prefWidth="205.0">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" />
+              </yAxis>
+            </LineChart>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="114.0" layoutY="186.0" prefHeight="17.0" prefWidth="69.0" text="MBPS" />
+         </children>
+      </Pane>
+      <Pane layoutX="430.0" layoutY="531.0" prefHeight="220.0" prefWidth="663.0" style="-fx-background-color: #8093ea; -fx-background-radius: 20px; -fx-border-color: #1f4ef8; -fx-border-width: 2px; -fx-border-radius: 20px;">
+         <children>
+            <Gauge fx:id="gaugeDisk" layoutX="466.0" layoutY="46.0" lcdFont="LCD" prefHeight="152.0" prefWidth="149.0" skinType="LEVEL" title="Uso">
+               <customFont>
+                  <Font name="Consolas Bold" size="14.0" />
+               </customFont>
+               <valueColor>
+                  <Color />
+               </valueColor>
+            </Gauge>
+            <TextField fx:id="textFieldDisksFormat" layoutX="58.0" layoutY="164.0" />
+            <TextField fx:id="textFieldDiskCapacity" layoutX="258.0" layoutY="164.0" />
+            <ChoiceBox fx:id="comboBoxDisks" layoutX="57.0" layoutY="85.0" prefHeight="25.0" prefWidth="350.0" />
+            <Label layoutX="57.0" layoutY="60.0" text="Nombre">
+               <font>
+                  <Font name="Consolas Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="56.0" layoutY="139.0" text="Formato">
+               <font>
+                  <Font name="Consolas Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="258.0" layoutY="139.0" text="Capacidad">
+               <font>
+                  <Font name="Consolas Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="283.0" layoutY="14.0" prefHeight="32.0" prefWidth="98.0" text="Discos" textAlignment="JUSTIFY">
+               <font>
+                  <Font name="Consolas Bold" size="28.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
+      <HBox alignment="TOP_RIGHT" layoutX="-15.0" layoutY="-1.0" prefHeight="30.0" prefWidth="1131.0" style="-fx-background-color: #1f4ef8;">
+         <children>
+              <Button fx:id="botonCerrar" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#closeApp" prefHeight="35.0" prefWidth="36.0" style="-fx-background-color: red; -fx-font-weight: 700;" text="X" textFill="#fcfbfb">
+                  <font>
+                      <Font name="Consolas" size="16.0" />
+                  </font>
+              </Button>
+         </children>
+      </HBox>
+    </children>
+</AnchorPane>
